--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,28 +15,56 @@ jobs:
           - platform: linux
             os: ubuntu-latest
             pixi-command: |
+              # Native
               pixi run -e linux test_linux a1 b2 c3
               echo "test input data" | pixi run -e linux ./arena_linux --test-input
               pixi run -e linux test_wordfreq_linux
               # TODO: `test_game_linux` doesn't work yet:
               #pixi run -e linux test_game_linux --test-frames 5
               pixi run -e linux build_game_linux
+
+              # WASM
+              pixi run -e wasm test_wasm a1 b2 c3
+              pixi run -e wasm test_base_wasm a1 b2 c3
+              echo "test input data" | pixi run -e wasm wasmtime --dir . arena.wasm --test-input
+              echo "test input data" | pixi run -e wasm wasmtime --dir . arena_base.wasm --test-input
+              pixi run -e wasm test_wordfreq_wasm
+              pixi run -e wasm build_game_wasm
           - platform: macos
             os: macos-latest
             pixi-command: |
+              # Native
               pixi run -e macos test_macos a1 b2 c3
               echo "test input data" | pixi run -e macos ./arena_macos --test-input
               pixi run -e macos test_wordfreq_macos
               pixi run -e macos test_game_macos --test-frames 5
               pixi run -e macos test_game_macos --export-obj model.obj
+
+              # WASM
+              pixi run -e wasm test_wasm a1 b2 c3
+              pixi run -e wasm test_base_wasm a1 b2 c3
+              echo "test input data" | pixi run -e wasm wasmtime --dir . arena.wasm --test-input
+              echo "test input data" | pixi run -e wasm wasmtime --dir . arena_base.wasm --test-input
+              pixi run -e wasm test_wordfreq_wasm
+              pixi run -e wasm build_game_wasm
           - platform: windows
             os: windows-latest
             pixi-command: |
               call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat" || exit /b 1
+
+              # Native
               pixi run -e windows test_windows a1 b2 c3 || exit /b 1
               echo test input data | pixi run -e windows ./arena_windows.exe --test-input || exit /b 1
               pixi run -e windows test_wordfreq_windows || exit /b 1
               pixi run -e windows test_game_windows --test-frames 5 || exit /b 1
+
+              # WASM
+              pixi run -e wasm test_wasm a1 b2 c3
+              pixi run -e wasm test_base_wasm a1 b2 c3
+              echo "test input data" | pixi run -e wasm wasmtime --dir . arena.wasm --test-input
+              echo "test input data" | pixi run -e wasm wasmtime --dir . arena_base.wasm --test-input
+              pixi run -e wasm test_wordfreq_wasm
+              pixi run -e wasm build_game_wasm
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
