--- a/pixi.toml
+++ b/pixi.toml
@@ -286,44 +286,12 @@ clang \
 
 test_hotel2gltf_linux = { cmd="./hotel2gltf_linux", depends-on=["build_hotel2gltf_linux"] }
 
-build_game_linux = """
-clang \
-    -I$CONDA_PREFIX/include \
-    -L$CONDA_PREFIX/lib \
-    -Wl,-rpath,$CONDA_PREFIX/lib \
-    -DWASI_LINUX_SKIP_ENTRY \
-    -I base \
-    -I native \
-    -I . \
-    -lSDL3 \
-    -lSDL3_image \
-    -lm \
-    -Wno-macro-redefined \
-    -o game_linux \
-    game.c \
-    base/base_io.c \
-    base/buddy.c \
-    base/arena.c \
-    base/scratch.c \
-    base/format.c \
-    base/io.c \
-    base/base_string.c \
-    base/mem.c \
-    base/numconv.c \
-    base/assert.c \
-    base/exit.c \
-    base/mat4.c \
-    base/base_math.c \
-    native/wasi_linux.c
-"""
-
-test_game_linux = { cmd="./game_linux", depends-on=["build_game_linux"] }
-
 [feature.linux.target.linux-64.dependencies]
 clang = ">=20.1.4,<21"
 sdl3 = "==3.3.3"
 sdl3_image = "==3.3.0"
 spirv-tools = ">=2025.4,<2026"
+
 
 [feature.macos.tasks]
 build_macos = """
@@ -421,7 +389,13 @@ clang \
 
 test_hotel2gltf_macos = { cmd="./hotel2gltf_macos", depends-on=["build_hotel2gltf_macos"] }
 
-build_game_macos = """
+[target.osx-arm64.dependencies]
+python = ">=3.12"
+sdl3 = "==3.3.3"
+sdl3_image = "==3.3.0"
+
+[target.osx-arm64.tasks]
+build_game = """
 clang \
     -I$CONDA_PREFIX/include \
     -L$CONDA_PREFIX/lib \
@@ -453,16 +427,54 @@ clang \
     native/wasi_macos.c
 """
 
-test_game_macos = { cmd="./game_macos", depends-on=["build_game_macos"] }
+test_game = { cmd="./game_macos", depends-on=["build_game"] }
 
-[target.osx-arm64.dependencies]
-python = ">=3.12"
+[target.linux-64.dependencies]
+clang = ">=20.1.4,<21"
+sdl3 = "==3.3.3"
+sdl3_image = "==3.3.0"
+spirv-tools = ">=2025.4,<2026"
+
+[target.linux-64.tasks]
+build_game = """
+clang \
+    -I$CONDA_PREFIX/include \
+    -L$CONDA_PREFIX/lib \
+    -Wl,-rpath,$CONDA_PREFIX/lib \
+    -DWASI_LINUX_SKIP_ENTRY \
+    -I base \
+    -I native \
+    -I . \
+    -lSDL3 \
+    -lSDL3_image \
+    -lm \
+    -Wno-macro-redefined \
+    -o game_linux \
+    game.c \
+    base/base_io.c \
+    base/buddy.c \
+    base/arena.c \
+    base/scratch.c \
+    base/format.c \
+    base/io.c \
+    base/base_string.c \
+    base/mem.c \
+    base/numconv.c \
+    base/assert.c \
+    base/exit.c \
+    base/mat4.c \
+    base/base_math.c \
+    native/wasi_linux.c
+"""
+
+test_game = { cmd="./game_linux", depends-on=["build_game"] }
 
 [feature.macos.target.osx-arm64.dependencies]
 # Use the system Clang on macOS
 #clang = ">=20.1.4,<21"
 sdl3 = "==3.3.3"
 sdl3_image = "==3.3.0"
+
 
 [feature.windows.tasks]
 build_windows = """
@@ -636,7 +648,15 @@ link \
 
 test_hotel2gltf_windows = { cmd="./hotel2gltf_windows.exe", depends-on=["build_hotel2gltf_windows"] }
 
-build_game_windows = """
+[target.win-64.dependencies]
+python = ">=3.12"
+cmake = ">=3.20"
+ninja = ">=1.10"
+sdl3 = "==3.3.3"
+sdl3_image = "==3.3.0"
+
+[target.win-64.tasks]
+build_game = """
 cl \
     /nologo \
     /std:c11 \
@@ -692,10 +712,7 @@ link \
     /out:game_windows.exe
 """
 
-test_game_windows = { cmd="./game_windows", depends-on=["build_game_windows"] }
-
-[target.win-64.dependencies]
-python = ">=3.12"
+test_game = { cmd="./game_windows", depends-on=["build_game"] }
 
 [feature.windows.target.win-64.dependencies]
 # Note: MSVC is not available through conda-forge, so we rely on system installation
@@ -706,6 +723,7 @@ cmake = ">=3.20"
 ninja = ">=1.10"
 sdl3 = "==3.3.3"
 sdl3_image = "==3.3.0"
+
 
 [tasks]
 all = { depends-on=["test_wasm", "test_linux"] }
@@ -722,7 +740,7 @@ build_all_platforms = { depends-on=["build_wasm", "build_linux", "build_macos", 
 #clang = ">=20.1.4,<21"
 
 [environments]
-default = { features = ["linux"], solve-group = "default" }
+default = { solve-group = "default" }
 wasm = ["wasm"]
 linux = { features = ["linux"], solve-group = "linux" }
 macos = { features = ["macos"], solve-group = "macos" }
