--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,9 +19,8 @@ jobs:
               pixi run -e linux test_linux a1 b2 c3
               echo "test input data" | pixi run -e linux ./arena_linux --test-input
               pixi run -e linux test_wordfreq_linux
-              pixi run -e linux build_game_linux
-              pixi run -e linux test_game_linux --export-obj model.obj
-              xvfb-run -a pixi run -e linux test_game_linux --test-frames 5
+              xvfb-run -a pixi run test_game --test-frames 5
+              pixi run test_game --export-obj model.obj
 
               # WASM
               pixi run -e wasm test_wasm a1 b2 c3
@@ -37,8 +36,8 @@ jobs:
               pixi run -e macos test_macos a1 b2 c3
               echo "test input data" | pixi run -e macos ./arena_macos --test-input
               pixi run -e macos test_wordfreq_macos
-              pixi run -e macos test_game_macos --test-frames 5
-              pixi run -e macos test_game_macos --export-obj model.obj
+              pixi run test_game --test-frames 5
+              pixi run test_game --export-obj model.obj
 
               # WASM
               pixi run -e wasm test_wasm a1 b2 c3
@@ -56,7 +55,7 @@ jobs:
               pixi run -e windows test_windows a1 b2 c3 || exit /b 1
               echo test input data | pixi run -e windows ./arena_windows.exe --test-input || exit /b 1
               pixi run -e windows test_wordfreq_windows || exit /b 1
-              pixi run -e windows test_game_windows --test-frames 5 || exit /b 1
+              pixi run test_game --test-frames 5 || exit /b 1
 
               # WASM
               pixi run -e wasm test_wasm a1 b2 c3
