--- a/pixi.toml
+++ b/pixi.toml
@@ -739,6 +739,7 @@ build_all_platforms = { depends-on=["build_wasm", "build_linux", "build_macos", 
 # on macOS we want system Clang
 #clang = ">=20.1.4,<21"
 shell = "*"
+pillow = ">=12.0.0,<13"
 
 [environments]
 default = { solve-group = "default" }
