--- a/render/Makefile
+++ b/render/Makefile
@@ -1,5 +1,5 @@
-CXX = g++
-CXXFLAGS = -std=c++11 -O2 -Wall -Wextra
+CXX = clang++
+CXXFLAGS = -std=c++11 -O3 -march=native -ffast-math -Wall -Wextra
 TARGET = renderer
 SOURCES = main.cpp
 HEADERS = math.h geometry.h material.h light.h camera.h scene.h integrator.h texture.h
