--- a/pixi.toml
+++ b/pixi.toml
@@ -403,7 +403,7 @@ clang \
     -I$CONDA_PREFIX/include \
     -L$CONDA_PREFIX/lib \
     -Wl,-rpath,$CONDA_PREFIX/lib \
-    -DPLATFORM_USE_EXTERNAL_STDLIB \
+    -DPLATFORM_SKIP_ENTRY \
     -I base \
     -I platform \
     -I . \
@@ -445,7 +445,7 @@ clang \
     -I$CONDA_PREFIX/include \
     -L$CONDA_PREFIX/lib \
     -Wl,-rpath,$CONDA_PREFIX/lib \
-    -DPLATFORM_USE_EXTERNAL_STDLIB \
+    -DPLATFORM_SKIP_ENTRY \
     -I base \
     -I platform \
     -I . \
@@ -669,7 +669,7 @@ cl \
     /I"base" \
     /I"platform" \
     /I"." \
-    /DPLATFORM_USE_EXTERNAL_STDLIB \
+    /DPLATFORM_SKIP_ENTRY \
     /MD \
     /c \
     game.c \
