--- a/pixi.toml
+++ b/pixi.toml
@@ -470,7 +470,7 @@ clang \
 """
 
 test_scene_builder_tool = { cmd="./scene_builder_tool test_scene.scn", depends-on=["build_scene_builder_tool"] }
-build_fps_text = "make -C fps text"
+build_fps_text = "make -C fps all"
 test_fps_text = { cmd="./fps/fps_text_macos", depends-on=["build_fps_text"] }
 
 [target.linux-64.dependencies]
@@ -550,7 +550,7 @@ clang \
 """
 
 test_scene_builder_tool = { cmd="./scene_builder_tool test_scene.scn", depends-on=["build_scene_builder_tool"] }
-build_fps_text = "make -C fps text"
+build_fps_text = "make -C fps all"
 test_fps_text = { cmd="./fps/fps_text_linux", depends-on=["build_fps_text"] }
 
 [feature.macos.target.osx-arm64.dependencies]
